--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Menu</h3>
         </div>
         <div id="intro">
-            <h1>Bent Lindberg<br>Digital aalu</h1>
+            <h1>Bent Lindberg<br>Digital aalu-gobhi</h1>
             <div id="place">
                 <h2>(Berlin, Germany)</h2>
                 <h2><i class="ri-arrow-left-down-line"></i>Scroll Down</h2>
